# Simple-2D-Tile-Engine

./: .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TODO.txt  animation.cpp  irender.h  main.cpp  render.cpp  sdlrender.cpp  sdlrender.h  tile.cc  tile.cpp  tilemap.cpp
data/: map.txt
src/: animation.h  main.cpp  sdlrender.cpp  tile.cpp  tilemap.h
